# TunaNotes

./: .directory  CMakeLists.txt  README.md  TunaNotes.kdev4  metadata.desktop  provaaa.md
.kdev4/: TunaNotes.kdev4
contents/config/: main.xml
contents/ui/: ConfigGeneral.qml  Format.qml  main.qml  main.qml.old
src/: CMakeLists.txt  DBusReceiver.cpp  DBusReceiver.h  Highlighter.cpp  Highlighter.h  fileManager.cpp  fileManager.h  launcher.cpp  launcher.h  main.cpp  plainTextFormat.cpp  plainTextFormat.h  resources.qrc
src/contents/ui/: Block.qml  BlockTextEdit.qml  CheckBoxElement.qml  Clipboard.qml  Document.qml  Document.qml.bak  DotListElement.qml  IndentElement.qml  MouseAreaFunctions.js  QuoteElement.qml  SyntaxNameField.qml  blockFunctions.js  keyHandler.js  main.qml  parser.js  syntaxDefinition.js
